90% coverage for model classes need to figure out Course test class